 syntax = "proto3";

package pb;

option go_package = "github.com/thearyanahmed/nlogx/pb";

message Flow {
  int32 hello = 1;
}

message FlowRequest {
  Flow flow = 1;
}

message FlowResponse {
  bool status = 1;
}

service FlowService {
  rpc RecordFlow(FlowRequest) returns (FlowResponse) {};
}